--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.15.0",
     "axios": "^1.6.3",
+    "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
