--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.15.0",
     "axios": "^1.6.3",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
     "flowbite-react": "^0.7.2",
-    "framer-motion": "^10.17.9",
+    "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
